	but filling in the union member for a Vista symbolic link.
	We had gotten away with this error because the union member
	(SymbolicLinkReparseBuffer) was misdefined in this file
	and in the 'winnt.h' in early versions of MinGW. MinGW 3.4.2
	has the correct definition of SymbolicLinkReparseBuffer, exposing
	the mismatch, and making tests cmdAH-19.4.1, fCmd-28.*, and
	filename-11.* fail. 

2008-04-04  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.9): Added testcase for [Bug 780533], based
	* tests/chanio.test: on Alexandre's test script. Also fixed
	  problem with timer in preceding test, was not canceled properly
	  in the ok case.

2008-04-04  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c (ReflectOutput): Allow zero return from
	  write when input was zero-length anyway. Otherwise keept it an
	  error, and separate the message from 'written too much'.

	* tests/ioCmd.test (iocmd-24.6): Testcase updated for changed
	  message.

	* generic/tclIORChan.c (ReflectClose): Added missing removal of
	  the now closed channel from the reflection map. Before we could
	  crash the system by invoking 'chan postevent' on a closed
	  reflected channel, dereferencing the dangling pointer in the
	  map.

	* tests/ioCmd.test (iocmd-31.8): Testcase for the above.

2008-04-03  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied patch [Bug 1932639] to
	* tests/io.test: prevent fcopy from calling -command synchronously
	* tests/chanio.test: the first time. Thanks to Alexandre Ferrieux
	  <ferrieux@users.sourceforge.net> for report and patch.

2008-04-02  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tcl.decls:	remove 'export' declarations of symbols now
				only in libtclstub and no longer in libtcl.
	
	* generic/tclStubLib.c:	make symbols in libtclstub.a MODULE_SCOPE to
	* tools/genStubs.tcl:	avoid exporting them from libraries that link
				with -ltclstub; constify tcl*StubsPtr and stub