@@ -6976,8 +6976,10 @@ test chan-io-53.9 {CopyData: -size and event interaction, Bug 780533} -setup {
 } -cleanup {
     chan close $pipe
     rename ::done {}
-    removeFile out
-    removeFile err
+    after 1000;			# Allow Windows time to figure out that the
+                                # process is gone
+    catch {removeFile out}
+    catch {removeFile err}
     catch {unset ::forever}
 } -result OK
 
