@@ -9,6 +9,16 @@
 	has the correct definition of SymbolicLinkReparseBuffer, exposing
 	the mismatch, and making tests cmdAH-19.4.1, fCmd-28.*, and
 	filename-11.* fail. 
+	* tests/chanio.test (chan-io-53.9):
+	* tests/io.test (io-53.9): Made test cleanup robust against
+	the possibility of slow process shutdown on Windows.
+
+	* win/tcl.m4: Added -D_CRT_SECURE_NO_DEPRECATE and 
+	-DCRT_NONSTDC_NO_DEPRECATE to the MSVC compilation flags
+	so that the compilation doesn't barf on perfectly reasonable
+	Posix system calls.
+	* win/configure: Manually patched (don't have the right autoconf
+	to hand).
 
 2008-04-04  Andreas Kupries  <andreask@activestate.com>
 
